removed underline of links by adding anchor styling

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -92,6 +92,13 @@ html {
 	background: lightgrey;
 	padding-top: 20px;
 	padding-left: 39px;
+	text-decoration: none;
+	color: black
+
+}
+
+a {
+	text-decoration: none;
 }
 
 .gallerySideBarButton:hover {
