--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -184,7 +184,8 @@ a {
 }
 
 .addButton2 {
-	margin-left: 26%;
+	margin-left: 7%;
+	border-right: none;
 }
 
 .formInput {
@@ -206,6 +207,24 @@ a {
 	transition: border 0.2s;
 }
 
+.deleteButton {
+	width: 100px;
+	height: 27px;
+	background: #f73002;
+	text-align: center;
+	line-height: 1.5;
+	border-radius: 8px;
+	position: absolute;
+	top: 33px;
+	right: 13px;
+	opacity: 0;
+}
 
+.relative {
+	position: relative;
+}
 
-
+.relative:hover > .deleteButton {
+	opacity: .5;
+	transition: opacity 0.5s;
+}
