--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,6 +1,6 @@
 html {
 	box-sizing: border-box;
-	height: 1000px;
+	height: 1500px;
 }
 
 *, *:after, *:before {
@@ -73,7 +73,7 @@ a {
 
 #gallerySideBar {
 	width: 200px;
-	height: 1000px;
+	height: 1500px;
 	background: grey;
 	padding-top: 300px;
 	float: left;
@@ -125,7 +125,7 @@ a {
 
 #photoContainer {
 	background: lightgrey;
-	height: 1000px;
+	height: 1500px;
 	width: 100%;
 	position: relative;
 }
@@ -163,6 +163,34 @@ a {
 	border-bottom: 8px solid darkred;
 }
 
+#goBack:active {
+	border-bottom: 0;
+	top: 261%;
+}
+
+#goBackphoto {
+	height: 86px;
+	width: 106px;
+	background: #c5c2c2;;
+	position: absolute;
+	border-radius: 19px;
+	border: none;
+	top: 53%;
+	left: 64%;
+	border-bottom: 8px solid #888888;
+}
+
+#goBackphoto:active {
+	border-bottom: none;
+	top: 54%;
+}
+
+#goBackphoto:hover {
+	background: #47dc19;
+	border-bottom: 8px solid #309436;
+	transition: background 1s;
+}
+
 .addButton {
 	color: black;
 	text-align: center;
@@ -188,7 +216,7 @@ a {
 .addButton:active {
 	border-bottom: 0;
 	border-top: 0;
-	margin-top: 35px;
+	margin-top: 30px;
 }
 
 .albumForm {
@@ -200,12 +228,20 @@ a {
 
 }
 
+.albumForm:active {
+	margin-top: 60px;
+}
+
 .photoForm {
 	top: 175%;
 	width: 29%;
 	height: 45%;
 	font-size: 58px;
 	border-right: none;
+}
+
+.photoForm:active {
+	top: 176%;
 }
 
 .photoBack {
@@ -220,9 +256,14 @@ a {
 	border-bottom: 8px solid #888888;
 }
 
-.photoBack:hover {
+.photoBack:hover, .photoContainerDeletePhoto:hover  {
 	background: #d01919;
 	border-bottom: 8px solid darkred;
+}
+
+.photoBack:active {
+	border-bottom: 0;
+	top: 189%;	
 }
 
 .addButton2 {
@@ -260,6 +301,9 @@ a {
 	top: 33px;
 	right: 13px;
 	opacity: 0;
+	font-family: "Indie Flower", cursive;
+	color: white;
+;
 }
 
 .relative {
@@ -269,4 +313,27 @@ a {
 .relative:hover > .deleteButton {
 	opacity: .5;
 	transition: opacity 0.5s;
+}
+
+.photoContainerDeletePhoto {
+	color: black;
+	text-align: center;
+	margin-bottom: 100px;
+	margin-top: 25px;
+	font-size: 54px;
+	background: #c5c2c2;
+	border-bottom: 8px solid #888888;
+	transition: background 0.5s;
+	width: 29%;
+	vertical-align: middle;
+	border-radius: 20px;
+	font-family: "Indie Flower", cursive;
+	position: absolute;
+	left: 34%;
+	top: 51.4%;
+}
+
+.photoContainerDeletePhoto:active {
+	border-bottom: none;
+	top: 52.4%;
 }
